--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^21.0.2",
+    "@rollup/plugin-node-resolve": "^15.0.2",
     "svelte": "^3.52.0",
     "svelte-check": "^2.9.0",
     "svelte-readme": "^3.6.3"
